--- a/ANLY590_Yan_HW1.ipynb
+++ b/ANLY590_Yan_HW1.ipynb
@@ -47,19 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<img src=\"prob1_plot2.jpg\"/>"
+       "<img src=\"prob1_plot22.png\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
    "source": [
     "# network\n",
     "from IPython.display import Image\n",
-    "img = 'prob1_plot2.jpg'\n",
+    "img = 'prob1_plot22.png'\n",
     "Image(url=img)"
    ]
   },
