--- a/ANLY590_Yan_HW1.ipynb
+++ b/ANLY590_Yan_HW1.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -66,9 +66,15 @@
    "source": [
     "# network\n",
     "from IPython.display import Image, display\n",
-    "from IPython.core.display import HTML\n",
     "img = 'prob1_plot22.png'\n",
     "display(Image(url=img))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](prob1_plot22.png)"
    ]
   },
   {
