--- a/ANLY590_Yan_HW1.ipynb
+++ b/ANLY590_Yan_HW1.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](prob1_plot22.png)"
+    "<img src=\"prob1_plot22.png\">"
    ]
   },
   {
